# activsync

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release-please.yml
src/activsync/: __init__.py  auth.py  config.py  db.py  dev_mock.py  dev_seed.py  events.py  garmin_client.py  logging_setup.py  main.py  poller.py  server.py  strava_client.py  sync.py  timeutil.py  update_check.py  view.py
src/activsync/static/css/: activities.css  activity-dialog.css  app.css  base.css  buttons.css  dev.css  forms.css  layout.css  nav.css  settings.css  setup.css  tokens.css
src/activsync/static/js/: activities.js
src/activsync/templates/: base.html  dashboard.html  login.html  settings.html  setup.html
src/activsync/templates/partials/: _autosync_categories.html  _footer.html  _manual_sync_status.html  _setup_checklist.html  activity_table.html  garmin_mfa_modal.html  setup_garmin.html  setup_strava.html  setup_sync_done.html  (+2 more)
tests/: conftest.py  test_activity_action_routes.py  test_auth.py  test_auth_routes.py  test_config.py  test_dashboard_routes.py  test_db.py  test_dev_mock_contract.py  test_dev_mock_setup.py  test_footer.py  test_garmin_client.py  test_logging_levels.py  test_logging_setup.py  test_main_logging.py  test_packaging.py  test_poller.py  test_server_health.py  test_settings_routes.py  test_strava_client.py  test_sync.py  test_timeutil.py  test_update_check.py  test_view.py
