[project]
name = "activsync"
version = "1.1.2"
description = "Activity synchronization and publishing control"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "garminconnect>=0.3.6",
    "garmin-auth>=0.3.0",
    "requests>=2.31",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
activsync = ["templates/*.html", "templates/partials/*.html", "static/*", "static/css/*.css"]
